--- a/src/main/webapp/admin/raportit.xhtml
+++ b/src/main/webapp/admin/raportit.xhtml
@@ -3,13 +3,13 @@
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
 	<h:panelGrid columns="2">
 		<h:panelGrid style="margin-right:20px">
-			<h:outputLink value="../API/kayttaja/jasenkortit" target="_blank">
+			<h:outputLink value="../API/kayttaja/jasenkortit" target="_blank" title="Muodosta jäsenkortit">
 				<h:graphicImage value="/kuvat/jäsenkortit.png" styleClass="isoikoni" />
 			</h:outputLink>
 			<h:outputText value="Jäsenkortit" />
 		</h:panelGrid>
 		<h:panelGrid>
-			<h:graphicImage value="/kuvat/raportti.jpg" styleClass="isoikoni" />
+			<h:graphicImage value="/kuvat/raportti.jpg" styleClass="isoikoni" title="Suorita raportti"/>
 			<h:outputText value="Joku raportti" />
 		</h:panelGrid>
 	</h:panelGrid>
