--- a/src/main/webapp/admin/tulosteet.xhtml
+++ b/src/main/webapp/admin/tulosteet.xhtml
@@ -6,7 +6,7 @@
 			<h:outputText value="#{_materiaali.nimi}"/>
 		</ace:column>
 		<ace:column>
-			<h:commandButton action="#{raporttiAdmin.tulostaMateriaali(_materiaali)}" image="/kuvat/tulosta.png" style="height:20px; width:20px;"/>
+			<h:commandButton action="#{raporttiAdmin.tulostaMateriaali(_materiaali)}" image="/kuvat/tulosta.png" style="height:20px; width:20px;" title="Tulosta materiaali"/>
 		</ace:column>
 	</ace:dataTable>
 </ui:composition>
