--- a/src/main/webapp/eikantaa.xhtml
+++ b/src/main/webapp/eikantaa.xhtml
@@ -11,7 +11,7 @@
 		<h:form>
 			<h:panelGrid style="width:80%; margin-left:auto; margin-right:auto">
 				<h:outputText value="Pistäppäs se tietokanta käyntiin ensin" />
-				<h:commandLink action="#{exceptionHandler.tapaSessio}" value="Ota vauhtia" />
+				<h:commandLink action="#{exceptionHandler.tapaSessio}" value="Ota vauhtia" title="Uusi yritys" />
 				<p />
 				<h:graphicImage value="/kuvat/eikantaa.png" />
 			</h:panelGrid>
