--- a/src/main/webapp/käyttäjä/perustiedot.xhtml
+++ b/src/main/webapp/käyttäjä/perustiedot.xhtml
@@ -59,7 +59,7 @@
 					<h:inputSecret value="#{kohde.salasana}" redisplay="true" id="salasana" />
 				</h:panelGrid>
 				<h:outputText value="" />
-				<h:commandButton value="x" styleClass="ikoni" action="#{käyttäjäylläpito.tallennaKohde}" image="/kuvat/tallenna.jpg"
+				<h:commandButton styleClass="ikoni" action="#{käyttäjäylläpito.tallennaKohde}" image="/kuvat/tallenna.jpg" title="Tallenna tiedot"
 					style="float:right">
 				</h:commandButton>
 			</h:panelGrid>
