--- a/src/main/webapp/tuo.xhtml
+++ b/src/main/webapp/tuo.xhtml
@@ -67,7 +67,7 @@
 					<h:outputText value="#{_harrastaja.lisenssinumero}" />
 				</ace:column>
 			</ace:dataTable>
-			<h:commandButton action="#{tuoVieAdmin.käsittele()}" image="/kuvat/tuo.png" styleClass="ikoni" />
+			<h:commandButton action="#{tuoVieAdmin.käsittele()}" image="/kuvat/tuo.png" styleClass="ikoni" title="Tuo tiedot" />
 		</h:form>
 	</f:view>
 </h:body>
