--- a/src/main/webapp/virhe.xhtml
+++ b/src/main/webapp/virhe.xhtml
@@ -11,7 +11,7 @@
 		<h:form>
 			<h:panelGrid style="width:80%; margin-left:auto; margin-right:auto">
 				<h:outputText value="Ohjelma kaatus, tässä lohdutukseksi koiranpentu" />
-				<h:commandLink action="#{exceptionHandler.tapaSessio}" value="Ota vauhtia" />
+				<h:commandLink action="#{exceptionHandler.tapaSessio}" value="Ota vauhtia" title="Kirjaudu uudestaan" />
 				<p />
 				<h:graphicImage value="/kuvat/puppy.png" />
 				<p />
