--- a/src/main/webapp/admin/harrastajat/sopimukset.xhtml
+++ b/src/main/webapp/admin/harrastajat/sopimukset.xhtml
@@ -5,8 +5,8 @@
 		height="200" closable="true" position="center">
 		<h:panelGrid columns="2" styleClass="centeredPanelGrid">
 			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaSopimuksenPoisto').hide()"
-				actionListener="#{harrastajaAdmin.poistaSopimus}" immediate="true" />
-			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaSopimuksenPoisto').hide()" immediate="true" />
+				actionListener="#{harrastajaAdmin.poistaSopimus}" immediate="true" title="Poista sopimus"/>
+			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaSopimuksenPoisto').hide()" immediate="true" title="Peruuta sopimuksen poisto"/>
 		</h:panelGrid>
 	</ace:confirmationDialog>
 	<ace:dataTable value="#{harrastaja.sopimukset}" var="_sopimus" selectionMode="single" rows="10" paginator="true"
@@ -42,14 +42,14 @@
 	</ace:dataTable>
 	<h:panelGrid columns="3">
 		<h:commandButton action="#{harrastajaAdmin.lisääSopimus()}" styleClass="ikoni" image="/kuvat/lisää.png"
-			immediate="true" stateMap="#{harrastajaAdmin.sopimusRSM}">
+			immediate="true" stateMap="#{harrastajaAdmin.sopimusRSM}" title="Lisää uusi sopimus">
 			<ace:ajax render="@form" />
 		</h:commandButton>
 		<h:commandButton rendered="#{sopimus != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
-			action="#{harrastajaAdmin.tallennaSopimus}">
+			action="#{harrastajaAdmin.tallennaSopimus}" title="Tallenna sopimus">
 			<f:ajax execute="@form" render="@form" />
 		</h:commandButton>
-		<h:commandButton styleClass="ikoni" rendered="#{sopimus != null}"
+		<h:commandButton styleClass="ikoni" rendered="#{sopimus != null}" title="Poista sopimus"
 			onclick="ice.ace.instance('form:vahvistaSopimuksenPoisto').show();" image="/kuvat/poista.png" immediate="true" />
 	</h:panelGrid>
 	<ace:panel header="Sopimustiedot" rendered="#{sopimus != null}" style="width:450px" id="sopimuspanel">
