--- a/src/main/webapp/admin/laskutus/kuittaus.xhtml
+++ b/src/main/webapp/admin/laskutus/kuittaus.xhtml
@@ -1,7 +1,7 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components" xmlns:fn="http://java.sun.com/jsp/jstl/functions">
-	<h:commandButton image="/kuvat/laskuta.png" action="#{laskutusAdmin.kuittaaLaskut}" styleClass="ikoni" />
+	<h:commandButton image="/kuvat/laskuta.png" action="#{laskutusAdmin.kuittaaLaskut}" styleClass="ikoni" title="Kuittaa laskut"/>
 	<h:panelGrid>
 		<ace:message for="kuitattavat" />
 		<h:inputTextarea rows="20" cols="10" value="#{laskutusAdmin.kuitattavatLaskut}" id="kuitattavat" />
