--- a/src/main/webapp/admin/perustiedot/roolit.xhtml
+++ b/src/main/webapp/admin/perustiedot/roolit.xhtml
@@ -5,8 +5,8 @@
 		closable="true" position="center">
 		<h:panelGrid columns="2" styleClass="centeredPanelGrid">
 			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaRoolinPoisto').hide()"
-				actionListener="#{perustietoAdmin.poistaRooli}" immediate="true"/>
-			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaRoolinPoisto').hide()" immediate="true"/>
+				actionListener="#{perustietoAdmin.poistaRooli}" immediate="true" title="Poista rooli"/>
+			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaRoolinPoisto').hide()" immediate="true" title="Peruuta roolin poisto"/>
 		</h:panelGrid>
 	</ace:confirmationDialog>
 	<h:panelGrid>
@@ -32,14 +32,14 @@
 		</h:panelGrid>
 		<h:panelGrid columns="3">
 			<h:commandButton action="#{perustietoAdmin.lisääRooli}" styleClass="ikoni" image="/kuvat/lisää.png"
-				immediate="true">
+				immediate="true" title="Lisää uusi rooli">
 				<ace:ajax render="@form" />
 			</h:commandButton>
 			<h:commandButton rendered="#{rooli != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
-				action="#{perustietoAdmin.tallennaRooli}">
+				action="#{perustietoAdmin.tallennaRooli}" title="Tallenna rooli">
 				<f:ajax execute="@form" render="@form" />
 			</h:commandButton>
-			<h:commandButton rendered="#{rooli != null}" styleClass="ikoni"
+			<h:commandButton rendered="#{rooli != null}" styleClass="ikoni" title="Poista rooli"
 				onclick="ice.ace.instance('form:vahvistaRoolinPoisto').show();" image="/kuvat/poista.png" immediate="true" />
 		</h:panelGrid>
 	</h:panelGrid>
