--- a/src/main/webapp/admin/perustiedot/sopimustyypit.xhtml
+++ b/src/main/webapp/admin/perustiedot/sopimustyypit.xhtml
@@ -4,9 +4,9 @@
 	<ace:confirmationDialog id="vahvistaSopimustyypinPoisto" message="Oletko varma?" header="Vahvista" width="350"
 		height="200" closable="true" position="center">
 		<h:panelGrid columns="2" styleClass="centeredPanelGrid">
-			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaSopimustyypinPoisto').hide()"
+			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaSopimustyypinPoisto').hide()" title="Poista sopimustyyppi"
 			 actionListener="#{perustietoAdmin.poistaSopimustyyppi}" immediate="true"/>
-			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaSopimustyypinPoisto').hide()" immediate="true"/>
+			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaSopimustyypinPoisto').hide()" immediate="true" title="Peruuta sopimustyypin poisto"/>
 		</h:panelGrid>
 	</ace:confirmationDialog>
 	<h:panelGrid>
@@ -71,14 +71,14 @@
 		</h:panelGrid>
 		<h:panelGrid columns="3">
 			<h:commandButton action="#{perustietoAdmin.lisääSopimustyyppi}" styleClass="ikoni" image="/kuvat/lisää.png"
-				immediate="true">
+				immediate="true" title="Lisää uusi sopimustyyppi">
 				<ace:ajax render="@form" />
 			</h:commandButton>
 			<h:commandButton rendered="#{sopimustyyppi != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
-				action="#{perustietoAdmin.tallennaSopimustyyppi}">
+				action="#{perustietoAdmin.tallennaSopimustyyppi}" title="Tallenna sopimustyyppi">
 				<f:ajax execute="@form" render="@form" />
 			</h:commandButton>
-			<h:commandButton rendered="#{sopimustyyppi != null}" styleClass="ikoni"
+			<h:commandButton rendered="#{sopimustyyppi != null}" styleClass="ikoni" title="Poista sopimustyyppi"
 				onclick="ice.ace.instance('form:vahvistaSopimustyypinPoisto').show();" image="/kuvat/poista.png" immediate="true" />
 		</h:panelGrid>
 		<h:panelGrid columns="2" columnClasses="tabletop, tabletop">
