--- a/src/main/webapp/ilmoittautuminen.xhtml
+++ b/src/main/webapp/ilmoittautuminen.xhtml
@@ -157,7 +157,7 @@ body {
 			</h:panelGrid>
 		</h:panelGroup>
 		<h:form id="formi">
-			<h:commandButton action="#{ilmoittautuminen.lueKortti()}" value="." style="display:none" id="luekortti" />
+			<h:commandButton action="#{ilmoittautuminen.lueKortti()}" value="." style="display:none" id="luekortti" title="Lue kortti"/>
 			<br />
 			<h:panelGrid columns="3" columnClasses="ylareuna,ylareuna,ylareuna">
 				<h:panelGrid rendered="#{treeniharrastaja == null}" columns="2">
@@ -198,7 +198,7 @@ body {
 				</h:panelGrid>
 				<ui:repeat value="#{tulevatTreenit}" var="_treeni">
 					<h:panelGroup styleClass="#{ilmoittautuminen.isTreeniValittu(_treeni) ? 'valittutreeni' : 'treeni'}">
-						<h:commandLink action="#{ilmoittautuminen.valitseTreeni(_treeni)}">
+						<h:commandLink action="#{ilmoittautuminen.valitseTreeni(_treeni)}" title="Valitse treeni">
 							<f:ajax render="@form" />
 							<h:panelGrid style="width:500px;">
 								<h:outputText value="#{_treeni.nimi} (#{_treeni.tyyppi.nimi})" styleClass="treeniteksti" />
@@ -230,9 +230,9 @@ body {
 					</h:panelGroup>
 				</ui:repeat>
 				<h:panelGrid id="napit">
-					<h:commandButton image="kuvat/ok.png" value="tallenna" id="tallenna" rendered="#{ilmoittautuminen.treeniValittu}"
-						styleClass="ikoni" action="#{ilmoittautuminen.tallenna}" />
-					<h:commandButton image="kuvat/peruuta.png" value="peruuta" styleClass="ikoni" immediate="true"
+					<h:commandButton image="kuvat/ok.png" id="tallenna" rendered="#{ilmoittautuminen.treeniValittu}"
+						styleClass="ikoni" action="#{ilmoittautuminen.tallenna}" title="Vahvista treenikäynti"/>
+					<h:commandButton image="kuvat/peruuta.png" styleClass="ikoni" immediate="true" title="Peruuta treenikäynti"
 						action="#{ilmoittautuminen.peruuta}" rendered="#{treeniharrastaja != null || ilmoittautuminen.treeniValittu}" />
 				</h:panelGrid>
 			</h:panelGrid>
