--- a/src/main/webapp/käyttäjä/vyökokeet.xhtml
+++ b/src/main/webapp/käyttäjä/vyökokeet.xhtml
@@ -10,13 +10,13 @@
 		<ace:confirmationDialog id="vahvistaVyökokeenPoisto" message="Oletko varma?" header="Vahvista" width="350"
 			height="200" closable="true" position="center">
 			<h:panelGrid columns="2" styleClass="centeredPanelGrid">
-				<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()"
+				<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()" title="Poista vyökoe"
 					action="#{käyttäjäylläpito.piilotaVyökoe}" actionListener="#{käyttäjäylläpito.poistaVyökoe}" immediate="true"/>
-				<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()" immediate="true"/>
+				<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').hide()" immediate="true" title="Peruuta vyökokeen poisto"/>
 			</h:panelGrid>
 		</ace:confirmationDialog>
 		<h:commandButton action="#{käyttäjäylläpito.lisääVyökoe}"  rendered="#{!itse.alaikäinen}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
-			immediate="true">
+			immediate="true" title="Lisää vyökoe">
 			<ace:ajax render="@form" />
 		</h:commandButton>
 		<ace:dataTable value="#{kohde.vyökokeet}" var="_vyökoe" rows="10" paginator="true" paginatorPosition="bottom"
@@ -65,14 +65,14 @@
 			</h:panelGrid>
 		</ace:panel>
 		<h:commandButton rendered="#{omaVyökoe != null}" styleClass="ikoni" image="/kuvat/tallenna.jpg"
-			action="#{käyttäjäylläpito.tallennaVyökoe}">
+			action="#{käyttäjäylläpito.tallennaVyökoe}" title="Tallenna vyökoe">
 			<f:ajax execute="@form" render="@form" />
 		</h:commandButton>
-		<h:commandButton rendered="#{omaVyökoe != null}" value="x" styleClass="ikoni" immediate="true"
+		<h:commandButton rendered="#{omaVyökoe != null}" title="Peruuta vyökoemuutos" styleClass="ikoni" immediate="true"
 			action="#{käyttäjäylläpito.peruutaVyökoemuutos}" image="/kuvat/peruuta_muutos.png">
 			<f:ajax render="@form" />
 		</h:commandButton>
-		<h:commandButton rendered="#{omaVyökoe.poistettavissa}" value="x" styleClass="ikoni"
+		<h:commandButton rendered="#{omaVyökoe.poistettavissa}" title="Poista vyökoe" styleClass="ikoni"
 			onclick="ice.ace.instance('form:vahvistaVyökokeenPoisto').show();" image="/kuvat/poista.png" immediate="true">
 			<ace:ajax render="@form" />
 		</h:commandButton>
