--- a/src/main/webapp/admin/harrastajat/roolit.xhtml
+++ b/src/main/webapp/admin/harrastajat/roolit.xhtml
@@ -4,7 +4,7 @@
 	<h:panelGrid>
 		<h:commandButton styleClass="ikoni" image="/kuvat/tallenna.jpg" action="#{harrastajaAdmin.tallennaHarrastaja}" title="Tallenna harrastaja"/>
 		<ace:listControl style="width:500px">
-			<ace:list value="#{roolit}" var="_rooli_a" selectionMode="multiple">
+			<ace:list value="#{mahdollisetRoolit}" var="_rooli_a" selectionMode="multiple">
 				<h:outputText value="#{_rooli_a.nimi}" />
 			</ace:list>
 			<ace:list value="#{harrastaja.roolit}" var="_rooli_b" selectionMode="multiple">
