--- a/src/main/webapp/admin/laskutus/laskut.xhtml
+++ b/src/main/webapp/admin/laskutus/laskut.xhtml
@@ -42,9 +42,9 @@
 			sortBy="#{_lasku.henkilö.nimi}" styleClass="lefttext">
 			<h:outputText value="#{_lasku.henkilö.nimi}" />
 		</ace:column>
-		<ace:column headerText="Luotu" filterBy="#{_lasku.luotu}" filterMatchMode="contains" sortBy="#{_lasku.luotu}"
+		<ace:column headerText="Muodostettu" filterBy="#{_lasku.muodostettu}" filterMatchMode="contains" sortBy="#{_lasku.muodostettu}"
 			styleClass="lefttext">
-			<h:outputText value="#{_lasku.luotu}">
+			<h:outputText value="#{_lasku.muodostettu}">
 				<f:convertDateTime pattern="dd.MM.yyyy HH:mm:ss" timeZone="EET" />
 			</h:outputText>
 		</ace:column>
