--- a/src/main/webapp/admin/laskutus/laskutus.xhtml
+++ b/src/main/webapp/admin/laskutus/laskutus.xhtml
@@ -2,14 +2,20 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
 	<ace:tabSet tabChangeListener="#{laskutusAdmin.tabiMuuttui}">
-		<ace:tabPane label="Laskut">
-			<ui:include src="laskut.xhtml" />
+		<ace:tabPane label="Laskuttamatta">
+			<ui:include src="laskuttamatta.xhtml" />
 		</ace:tabPane>
-		<ace:tabPane label="Laskuttamattomat">
-			<ui:include src="laskuttamattomat.xhtml" />
+		<ace:tabPane label="Lähettämättä">
+			<ui:include src="lähettämättä.xhtml" />
+		</ace:tabPane>
+		<ace:tabPane label="Maksamatta">
+			<ui:include src="maksamatta.xhtml" />
 		</ace:tabPane>
 		<ace:tabPane label="Kuittaus">
 			<ui:include src="kuittaus.xhtml" />
+		</ace:tabPane>
+		<ace:tabPane label="Maksettu">
+			<ui:include src="maksetut.xhtml" />
 		</ace:tabPane>
 	</ace:tabSet>
 </ui:composition>
